fixed overflow on mobile view

--- a/src/app/styles/Home.module.scss
+++ b/src/app/styles/Home.module.scss
@@ -1,6 +1,6 @@
 .container{
     position: relative;
-    overflow: auto;
+    overflow: hidden auto;
     overscroll-behavior-y: contain;
     scroll-snap-type: y mandatory;
     height: 100vh;
